<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iovineantonio.address_book.features.addcontact.AddContactScreen"
        android:label="@string/title_add_contact"
        tools:layout="@layout/screen_add_contact" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.iovineantonio.address_book.features.contacts.ContactsScreen"
        android:label="@string/title_dashboard"
        tools:layout="@layout/screen_contacts" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.iovineantonio.address_book.features.about.AboutScreen"
        android:label="@string/about_title"
        tools:layout="@layout/screen_about" />
</navigation>
