<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.addcontact.AddContactScreen">

    <Toolbar
        android:id="@+id/edit_contact_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:contentInsetStart="0dp"
        android:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbar_back"
                android:layout_width="@dimen/address_book_margin_xbig"
                android:layout_height="@dimen/address_book_margin_xbig"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/address_book_margin_smaller"
                android:background="@drawable/custom_item_bg_round"
                android:elevation="@dimen/elevation_standard"
                android:padding="@dimen/address_book_default_padding"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/PrimaryText"
                android:layout_width="@dimen/view_match_constraint"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/address_book_margin_bigger"
                android:layout_marginTop="@dimen/address_book_margin_very_small"
                android:layout_toEndOf="@id/toolbar_back"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="@dimen/address_book_text_size_bigger"
                android:visibility="visible"
                tools:text="Update contact" />
        </RelativeLayout>
    </Toolbar>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progress"
        android:layout_width="@dimen/address_book_margin_xxbig"
        android:layout_height="@dimen/address_book_margin_xxbig"
        android:elevation="@dimen/address_book_margin_big"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/edit_contact_details_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/address_book_margin_small"
        android:layout_marginEnd="@dimen/address_book_margin_small"
        android:layout_marginBottom="@dimen/address_book_margin_small"
        app:layout_constraintBottom_toTopOf="@id/update_contact_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_contact_toolbar_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_contact_name"
                style="@style/EditTextBase"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:autofillHints="Auto fill"
                android:hint="@string/add_contact_name"
                android:singleLine="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_contact_surname"
                style="@style/EditTextBase"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:autofillHints="Auto fill"
                android:hint="@string/add_contact_surname"
                android:singleLine="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_contact_address"
                style="@style/EditTextBase"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:autofillHints="Auto fill"
                android:hint="@string/add_contact_address"
                android:singleLine="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_contact_email"
                style="@style/EditTextBase"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:autofillHints="Auto fill"
                android:hint="@string/add_contact_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_contact_phone_number"
                style="@style/EditTextBase"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:autofillHints="Auto fill"
                android:hint="@string/add_contact_phone_number"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/update_contact_action"
        style="@style/ButtonDefault.Flat.Primary"
        android:layout_width="0dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/address_book_margin_default"
        android:contentDescription="@string/action_update_contact"
        android:enabled="true"
        android:saveEnabled="false"
        android:text="@string/action_update_contact"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
