<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.addcontact.AddContactScreen">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progress"
        android:layout_width="@dimen/address_book_margin_xxbig"
        android:layout_height="@dimen/address_book_margin_xxbig"
        android:elevation="@dimen/address_book_margin_big"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_contact_title"
        style="@style/PrimaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/address_book_margin_small"
        android:layout_marginTop="@dimen/address_book_margin_default"
        android:layout_marginEnd="@dimen/address_book_margin_small"
        android:text="@string/add_contact_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/add_contact_details_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/address_book_margin_small"
        android:layout_marginEnd="@dimen/address_book_margin_small"
        android:layout_marginBottom="@dimen/address_book_margin_small"
        app:layout_constraintBottom_toTopOf="@id/save_contact_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_contact_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <cz.ackee.ui.textfield.TextInputLayout
                android:id="@+id/add_contact_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/address_book_margin_bigger"
                android:layout_marginEnd="@dimen/address_book_margin_bigger"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:hint="@string/add_contact_name"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusBottomStart="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopStart="@dimen/address_book_margin_small"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="true"
                app:hintPaddingTop="@dimen/address_book_margin_default"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                <cz.ackee.ui.textfield.TextInputEditText
                    android:id="@+id/add_contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/address_book_margin_big"
                    android:singleLine="true" />
            </cz.ackee.ui.textfield.TextInputLayout>

            <cz.ackee.ui.textfield.TextInputLayout
                android:id="@+id/add_contact_surname_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/address_book_margin_bigger"
                android:layout_marginEnd="@dimen/address_book_margin_bigger"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:hint="@string/add_contact_surname"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusBottomStart="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopStart="@dimen/address_book_margin_small"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="true"
                app:hintPaddingTop="@dimen/address_book_margin_default"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                <cz.ackee.ui.textfield.TextInputEditText
                    android:id="@+id/add_contact_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/address_book_margin_big"
                    android:singleLine="true" />
            </cz.ackee.ui.textfield.TextInputLayout>

            <cz.ackee.ui.textfield.TextInputLayout
                android:id="@+id/add_contact_address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/address_book_margin_bigger"
                android:layout_marginEnd="@dimen/address_book_margin_bigger"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:hint="@string/add_contact_address"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusBottomStart="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopStart="@dimen/address_book_margin_small"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="true"
                app:hintPaddingTop="@dimen/address_book_margin_default"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                <cz.ackee.ui.textfield.TextInputEditText
                    android:id="@+id/add_contact_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/address_book_margin_big"
                    android:singleLine="true" />
            </cz.ackee.ui.textfield.TextInputLayout>

            <cz.ackee.ui.textfield.TextInputLayout
                android:id="@+id/add_contact_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/address_book_margin_bigger"
                android:layout_marginEnd="@dimen/address_book_margin_bigger"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:hint="@string/add_contact_email"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusBottomStart="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopStart="@dimen/address_book_margin_small"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="true"
                app:hintPaddingTop="@dimen/address_book_margin_default"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                <cz.ackee.ui.textfield.TextInputEditText
                    android:id="@+id/add_contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/address_book_margin_big"
                    android:singleLine="true" />
            </cz.ackee.ui.textfield.TextInputLayout>

            <cz.ackee.ui.textfield.TextInputLayout
                android:id="@+id/add_contact_phone_number_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/address_book_margin_bigger"
                android:layout_marginEnd="@dimen/address_book_margin_bigger"
                android:layout_marginBottom="@dimen/address_book_margin_default"
                android:hint="@string/add_contact_phone_number"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusBottomStart="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopEnd="@dimen/address_book_margin_small"
                app:boxCornerRadiusTopStart="@dimen/address_book_margin_small"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="true"
                app:hintPaddingTop="@dimen/address_book_margin_default"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                <cz.ackee.ui.textfield.TextInputEditText
                    android:id="@+id/add_contact_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/address_book_margin_big"
                    android:singleLine="true" />
            </cz.ackee.ui.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_contact_action"
        style="@style/ButtonDefault.Flat.Primary"
        android:layout_width="0dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/address_book_margin_bigger"
        android:layout_marginTop="@dimen/address_book_margin_default"
        android:layout_marginEnd="@dimen/address_book_margin_bigger"
        android:contentDescription="@string/action_save_contact"
        android:enabled="true"
        android:saveEnabled="false"
        android:text="@string/action_save_contact"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/add_mock_contacts_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_mock_contacts_action"
        style="@style/ButtonDefault.Flat.Primary"
        android:layout_width="0dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/address_book_margin_bigger"
        android:layout_marginTop="@dimen/address_book_margin_default"
        android:layout_marginEnd="@dimen/address_book_margin_bigger"
        android:contentDescription="@string/action_add_mock_contacts"
        android:enabled="true"
        android:text="@string/action_add_mock_contacts"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
